# bench-wizard

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
bench_wizard/: __init__.py  __main__.py  benchmark.py  cargo.py  config.py  db_bench.py  exceptions.py  main.py  output.py  parser.py  performance.py
tests/: test_bench_wizard.py  test_parser.py
