[tool.poetry]
name = "bench-wizard"
version = "0.3.0"
description = ""
authors = ["Martin Hloska <martin.hloska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.scripts]
benchwizard = 'bench_wizard.main:main'

[tool.poetry.dev-dependencies]
pytest = "6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
